2006-02-20  Roland McGrath  <roland@frob.com>

	* hurd/hurd/xattr.h: New file.
	* hurd/xattr.c: New file.
	* hurd/Makefile (routines): Add it.
	* sysdeps/mach/hurd/fgetxattr.c: New file.
	* sysdeps/mach/hurd/flistxattr.c: New file.
	* sysdeps/mach/hurd/fremovexattr.c: New file.
	* sysdeps/mach/hurd/fsetxattr.c: New file.
	* sysdeps/mach/hurd/getxattr.c: New file.
	* sysdeps/mach/hurd/lgetxattr.c: New file.
	* sysdeps/mach/hurd/listxattr.c: New file.
	* sysdeps/mach/hurd/lsetxattr.c: New file.
	* sysdeps/mach/hurd/removexattr.c: New file.
	* sysdeps/mach/hurd/setxattr.c: New file.

2006-02-13  Mike Frysinger  <vapier@gentoo.org>

	* string/tester.c (test_strnlen): New function.
	(test_strchr): Call it.
	(test_strncat): Test lengths where the sign bit is set.
	(test_strncmp): Likewise.

2006-02-17  Jakub Jelinek  <jakub@redhat.com>

	* include/atomic.h (atomic_and, atomic_or): Define.

2006-02-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/bits/mman.h: Define MADV_DONTFORK
	and MADV_DOFORK.
	* sysdeps/unix/sysv/linux/ia64/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/m68k/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/mman.h: Likewise.

2006-02-13  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/not-cancel.h (__openat_not_cancel,
	__openat64_not_cancel): Remove prototypes.
	(__openat_nocancel, __openat64_nocancel): New prototypes or defines.
	(openat_not_cancel, openat_not_cancel_3, openat64_not_cancel,
	openat64_not_cancel_3): Use them.

2006-02-12  Ulrich Drepper  <drepper@redhat.com>

	* io/ftw.c: Start using *at functions.
	* io/ftw64.c: Likewise.

	* sysdeps/generic/not-cancel.h: Define openat_not_cancel,